Fix container gap

--- a/src/components/CommonStyles.css
+++ b/src/components/CommonStyles.css
@@ -404,7 +404,7 @@ body {
   flex: 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: stretch;
   height: 100%;
   gap: 20px;
@@ -425,6 +425,19 @@ body {
   display: flex;
   flex: 1;
   height: 100%;
+}
+
+.other-pages .middle-section {
+  flex: 1;
+  height: 100%;
+  min-height: 250px; 
+  display: flex;
+  gap: 20px;
+  align-items: stretch;
+}
+
+.other-pages .right-column {
+  gap: 7px !important
 }
 
 .left-half {
